# fastapi

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 56571d82b675_initial_migration_with_uuid_and_enums.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  items.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: enums.py  item.py  user.py
backend/app/schemas/: auth.py
backend/app/utils/: factories.py
backend/scripts/: seed_db.py
frontend/: Dockerfile  Dockerfile.dev  middleware.ts  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/dashboard/: page.tsx
frontend/app/(dashboard)/items/: page.tsx
frontend/app/(dashboard)/profile/: page.tsx
frontend/constants/: index.ts
frontend/contexts/: auth-context.tsx
frontend/services/: api-client.ts  auth.service.ts  index.ts  item.service.ts  user.service.ts
frontend/types/schemas/: auth.ts  common.ts  index.ts  item.ts  user.ts
frontend/utils/: error-handler.ts  format.ts
